fix(ui): Fix color contrast for log lines

--- a/src/client/index-next.css
+++ b/src/client/index-next.css
@@ -46,3 +46,11 @@
 .chakra-stack .MuiLinearProgress-root {
       height: 8px;
 }
+
+.ansi-cyan-fg {
+      color: var(--chakra-colors-color-palette-solid)
+}
+
+.logline code span:first-child {
+      color: var(--chakra-colors-gray-500);
+}
